--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@
 title: Kyle's Senior Design Site
 email: kyle.allen.260@my.csun.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hello, and welcome to my Senior Design Website! This is where I will be making
+  blog posts for my CIT 480 class! Check back here every week for updates on 
+  my technical life.
 baseurl: "SeniorDesignSite/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
